; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/vcos/generic/extr_vcos_logcat.c_read_level.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/vcos/generic/extr_vcos_logcat.c_read_level.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VCOS_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [26 x i8] c"Invalid trace level '%s'\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8**, i8)* @read_level to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_level(i32* %0, i8** %1, i8 signext %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8, align 1
  %7 = alloca [16 x i8], align 16
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i8 %2, i8* %6, align 1
  store i32 1, i32* %8, align 4
  %9 = getelementptr inbounds [16 x i8], [16 x i8]* %7, i64 0, i64 0
  %10 = load i8**, i8*** %5, align 8
  %11 = load i8, i8* %6, align 1
  %12 = call i64 @read_tok(i8* %9, i32 16, i8** %10, i8 signext %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %24

14:                                               ; preds = %3
  %15 = getelementptr inbounds [16 x i8], [16 x i8]* %7, i64 0, i64 0
  %16 = load i32*, i32** %4, align 8
  %17 = call i64 @vcos_string_to_log_level(i8* %15, i32* %16)
  %18 = load i64, i64* @VCOS_SUCCESS, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %14
  %21 = getelementptr inbounds [16 x i8], [16 x i8]* %7, i64 0, i64 0
  %22 = call i32 @vcos_log(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %21)
  store i32 0, i32* %8, align 4
  br label %23

23:                                               ; preds = %20, %14
  br label %25

24:                                               ; preds = %3
  store i32 0, i32* %8, align 4
  br label %25

25:                                               ; preds = %24, %23
  %26 = load i32, i32* %8, align 4
  ret i32 %26
}

declare dso_local i64 @read_tok(i8*, i32, i8**, i8 signext) #1

declare dso_local i64 @vcos_string_to_log_level(i8*, i32*) #1

declare dso_local i32 @vcos_log(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
